practice project submission update

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,18 +95,18 @@
        "2018-08-01 01:38:45+00:00         QLD  153.05 -26.68   -26.68   153.05   \n",
        "2018-08-01 01:51:15+00:00         QLD  153.44 -28.06   -28.06   153.44   \n",
        "\n",
-       "                          distance  \n",
-       "timestamp                           \n",
-       "2018-08-01 01:01:15+00:00     5.34  \n",
-       "2018-08-01 01:13:45+00:00   691.63  \n",
-       "2018-08-01 01:26:15+00:00     8.01  \n",
-       "2018-08-01 01:38:45+00:00   109.20  \n",
-       "2018-08-01 01:51:15+00:00    12.60  "
+       "                          distance    country  \n",
+       "timestamp                                      \n",
+       "2018-08-01 01:01:15+00:00     5.34  Australia  \n",
+       "2018-08-01 01:13:45+00:00   691.63  Australia  \n",
+       "2018-08-01 01:26:15+00:00     8.01  Australia  \n",
+       "2018-08-01 01:38:45+00:00    109.2  Australia  \n",
+       "2018-08-01 01:51:15+00:00     12.6  Australia  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>status</th>\n      <th>card_present_flag</th>\n      <th>first_name</th>\n      <th>age</th>\n      <th>gender</th>\n      <th>txn_description</th>\n      <th>balance</th>\n      <th>amount</th>\n      <th>geometry</th>\n      <th>X</th>\n      <th>Y</th>\n      <th>merch_suburb</th>\n      <th>merch_state</th>\n      <th>merch_geometry</th>\n      <th>merch_X</th>\n      <th>merch_Y</th>\n      <th>distance</th>\n    </tr>\n    <tr>\n      <th>timestamp</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2018-08-01 01:01:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>POS</td>\n      <td>35.39</td>\n      <td>16.25</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Ashmore</td>\n      <td>QLD</td>\n      <td>153.38 -27.99</td>\n      <td>-27.99</td>\n      <td>153.38</td>\n      <td>5.34</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:13:45+00:00</th>\n      <td>authorized</td>\n      <td>0.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>21.20</td>\n      <td>14.19</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Sydney</td>\n      <td>NSW</td>\n      <td>151.21 -33.87</td>\n      <td>-33.87</td>\n      <td>151.21</td>\n      <td>691.63</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:26:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Michael</td>\n      <td>38</td>\n      <td>M</td>\n      <td>POS</td>\n      <td>5.71</td>\n      <td>6.42</td>\n      <td>151.23 -33.94</td>\n      <td>-33.94</td>\n      <td>151.23</td>\n      <td>Sydney</td>\n      <td>NSW</td>\n      <td>151.21 -33.87</td>\n      <td>-33.87</td>\n      <td>151.21</td>\n      <td>8.01</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:38:45+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Rhonda</td>\n      <td>40</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>2117.22</td>\n      <td>40.90</td>\n      <td>153.10 -27.66</td>\n      <td>-27.66</td>\n      <td>153.10</td>\n      <td>Buderim</td>\n      <td>QLD</td>\n      <td>153.05 -26.68</td>\n      <td>-26.68</td>\n      <td>153.05</td>\n      <td>109.20</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:51:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>17.95</td>\n      <td>3.25</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Mermaid Beach</td>\n      <td>QLD</td>\n      <td>153.44 -28.06</td>\n      <td>-28.06</td>\n      <td>153.44</td>\n      <td>12.60</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>status</th>\n      <th>card_present_flag</th>\n      <th>first_name</th>\n      <th>age</th>\n      <th>gender</th>\n      <th>txn_description</th>\n      <th>balance</th>\n      <th>amount</th>\n      <th>geometry</th>\n      <th>X</th>\n      <th>Y</th>\n      <th>merch_suburb</th>\n      <th>merch_state</th>\n      <th>merch_geometry</th>\n      <th>merch_X</th>\n      <th>merch_Y</th>\n      <th>distance</th>\n      <th>country</th>\n    </tr>\n    <tr>\n      <th>timestamp</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2018-08-01 01:01:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>POS</td>\n      <td>35.39</td>\n      <td>16.25</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Ashmore</td>\n      <td>QLD</td>\n      <td>153.38 -27.99</td>\n      <td>-27.99</td>\n      <td>153.38</td>\n      <td>5.34</td>\n      <td>Australia</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:13:45+00:00</th>\n      <td>authorized</td>\n      <td>0.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>21.20</td>\n      <td>14.19</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Sydney</td>\n      <td>NSW</td>\n      <td>151.21 -33.87</td>\n      <td>-33.87</td>\n      <td>151.21</td>\n      <td>691.63</td>\n      <td>Australia</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:26:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Michael</td>\n      <td>38</td>\n      <td>M</td>\n      <td>POS</td>\n      <td>5.71</td>\n      <td>6.42</td>\n      <td>151.23 -33.94</td>\n      <td>-33.94</td>\n      <td>151.23</td>\n      <td>Sydney</td>\n      <td>NSW</td>\n      <td>151.21 -33.87</td>\n      <td>-33.87</td>\n      <td>151.21</td>\n      <td>8.01</td>\n      <td>Australia</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:38:45+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Rhonda</td>\n      <td>40</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>2117.22</td>\n      <td>40.90</td>\n      <td>153.10 -27.66</td>\n      <td>-27.66</td>\n      <td>153.10</td>\n      <td>Buderim</td>\n      <td>QLD</td>\n      <td>153.05 -26.68</td>\n      <td>-26.68</td>\n      <td>153.05</td>\n      <td>109.2</td>\n      <td>Australia</td>\n    </tr>\n    <tr>\n      <th>2018-08-01 01:51:15+00:00</th>\n      <td>authorized</td>\n      <td>1.0</td>\n      <td>Diana</td>\n      <td>26</td>\n      <td>F</td>\n      <td>SALES-POS</td>\n      <td>17.95</td>\n      <td>3.25</td>\n      <td>153.41 -27.95</td>\n      <td>-27.95</td>\n      <td>153.41</td>\n      <td>Mermaid Beach</td>\n      <td>QLD</td>\n      <td>153.44 -28.06</td>\n      <td>-28.06</td>\n      <td>153.44</td>\n      <td>12.6</td>\n      <td>Australia</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 6
     }
    ],
    "source": [
@@ -116,18 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(12043, 17)"
+       "(12043, 18)"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 7
     }
    ],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,18 +155,85 @@
        "Index(['status', 'card_present_flag', 'first_name', 'age', 'gender',\n",
        "       'txn_description', 'balance', 'amount', 'geometry', 'X', 'Y',\n",
        "       'merch_suburb', 'merch_state', 'merch_geometry', 'merch_X', 'merch_Y',\n",
-       "       'distance'],\n",
+       "       'distance', 'country'],\n",
        "      dtype='object')"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 8
     }
    ],
    "source": [
     "# confirmation of existing columns of file on load\n",
     "df.columns\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "status                   2\n",
+       "card_present_flag        2\n",
+       "first_name              80\n",
+       "age                     33\n",
+       "gender                   2\n",
+       "txn_description          6\n",
+       "balance              12006\n",
+       "amount                4457\n",
+       "geometry               100\n",
+       "X                       85\n",
+       "Y                       87\n",
+       "merch_suburb          1609\n",
+       "merch_state              8\n",
+       "merch_geometry        2703\n",
+       "merch_X                670\n",
+       "merch_Y                719\n",
+       "distance              4253\n",
+       "country                  1\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "# Check the distinct values for each column\n",
+    "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "91"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "df.index.strftime('%d/%m/%Y').nunique()"
+   ]
+  },
+  {
+   "source": [
+    "* The dataset spans August, September and October. This should include all 92 days. However, our dataset as 91 transactions only, suggesting 1 day of missing data\n",
+    "* This would be fine for our analysis, as long as weeks are not considered as this may distort periodic data that is dependent on sets of 7 days. Majority of the analysis would be around days and months as demonstrated in the seasonality plots."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1285,7 +1352,8 @@
     "* Two linear measurements are plotted in the Open Street Map above by default. One for feature groups (Nathaniel, 3212.21 km, POS) and one for (Ruth, 51.91 km, POS).\n",
     "* Transactions with 0 distance should be ignored. Usually it means that it is a posted transaction. I.e. it is either a recurring or salary transaction done over phone or internet.\n",
     "* Transactions done for overseas locations are usually posted transactions.\n",
-    "* Majority of thr transaction samples are local transactions"
+    "* Majority of thr transaction samples are local transactions\n",
+    "* There is one transaction that involved a merchant outside Australia. However, since it was an ambiguous payment type, it seems more like an outlier and would require further investigation"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1607,7 +1675,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python385jvsc74a57bd0bc35b5ffc8f6562ab4deb4370e811664ba3c75a97eef4ba2623a917286552588",
-   "display_name": "Python 3.8.5 64-bit (conda)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1619,7 +1687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
