--- a/Task 2. Predictive Analytics.ipynb
+++ b/Task 2. Predictive Analytics.ipynb
@@ -2508,45 +2508,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {'n_estimators': 200,\n",
-    "             'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
-    "             'max_features': ['auto', 'sqrt', 'log2'],\n",
-    "#              'min_samples_leaf': [1, 2, 4]\n",
-    "             'min_samples_split': [2, 5, 10]}\n",
+    "param_grid = {\n",
+    "#               'n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000],\n",
+    "              'n_estimators': [200, 400],\n",
+    "              'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
+    "              'max_features': ['auto', 'sqrt', 'log2'],\n",
+    "#             'min_samples_leaf': [1, 2, 4],\n",
+    "              'min_samples_split': [2, 5, 10]}\n",
     "reg = GridSearchCV(RandomForestRegressor(random_state=42), param_grid, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 2min 20s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
-       "             param_grid={'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
-       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
-       "                         'min_samples_leaf': [1, 2, 4],\n",
-       "                         'min_samples_split': [2, 5, 10]})"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# Fit the model\n",
@@ -2555,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2544,7 @@
        "RandomForestRegressor(max_depth=10, min_samples_split=10, random_state=42)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
