--- a/Task 2. Predictive Analytics.ipynb
+++ b/Task 2. Predictive Analytics.ipynb
@@ -2524,9 +2524,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4min 34s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
+       "             param_grid={'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
+       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
+       "                         'min_samples_split': [2, 5, 10],\n",
+       "                         'n_estimators': [200, 400]})"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "# Fit the model\n",
