--- a/Task 2. Predictive Analytics.ipynb
+++ b/Task 2. Predictive Analytics.ipynb
@@ -2145,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 669,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,21 +2157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 670,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added feature amt  with R^2 = 0.338 and adjusted R^2 = 0.315\n",
-      "Added feature t_pay with R^2 = 0.431 and adjusted R^2 = 0.389\n",
-      "Added feature t_phb with R^2 = 0.458 and adjusted R^2 = 0.396\n",
+      "Added feature amt  with R^2 = 0.516 and adjusted R^2 = 0.499\n",
+      "Added feature t_pay with R^2 = 0.597 and adjusted R^2 = 0.567\n",
+      "Added feature c_WC with R^2 = 0.626 and adjusted R^2 = 0.582\n",
+      "Added feature r    with R^2 = 0.640 and adjusted R^2 = 0.582\n",
+      "Added feature m_dist with R^2 = 0.660 and adjusted R^2 = 0.589\n",
       "**************************************************\n",
       "\n",
       "Resulting features:\n",
-      "amt, t_pay, t_phb\n",
-      "Wall time: 451 ms\n"
+      "amt, t_pay, c_WC, r, m_dist\n",
+      "Wall time: 670 ms\n"
      ]
     }
    ],
@@ -2264,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 671,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2277,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 672,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,14 +2297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1e+03 µs\n"
+      "Wall time: 2.01 ms\n"
      ]
     },
     {
@@ -2311,7 +2313,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 583,
+     "execution_count": 674,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,16 +2325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4807824680905214"
+       "0.6748200748926076"
       ]
      },
-     "execution_count": 585,
+     "execution_count": 675,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2344,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,14 +2376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 25s\n"
+      "Wall time: 1min 27s\n"
      ]
     },
     {
@@ -2396,7 +2398,7 @@
        "                         'splitter': ['best', 'random']})"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 678,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,16 +2432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4122471535852714"
+       "0.8160537430129958"
       ]
      },
-     "execution_count": 597,
+     "execution_count": 679,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,88 +2453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [],
    "source": [
     "results.loc['Decision Tree Regressor'] = accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 599,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Linear Regression</th>\n",
-       "      <td>0.480782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ridge Regression</th>\n",
-       "      <td>0.736651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lasso Regression</th>\n",
-       "      <td>0.679069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decision Tree Regressor</th>\n",
-       "      <td>0.412247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Random Forest Regressor</th>\n",
-       "      <td>0.082546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Support Vector Regressor</th>\n",
-       "      <td>0.332248</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          accuracy\n",
-       "Linear Regression         0.480782\n",
-       "Ridge Regression          0.736651\n",
-       "Lasso Regression          0.679069\n",
-       "Decision Tree Regressor   0.412247\n",
-       "Random Forest Regressor   0.082546\n",
-       "Support Vector Regressor  0.332248"
-      ]
-     },
-     "execution_count": 599,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
    ]
   },
   {
@@ -2544,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2554,40 +2479,18 @@
     "              'max_features': ['auto', 'sqrt', 'log2'],\n",
     "              'min_samples_split': [2, 5, 10]\n",
     "        }\n",
-    "reg = GridSearchCV(RandomForestRegressor(random_state=42), param_grid, cv=5)"
+    "rf = GridSearchCV(RandomForestRegressor(random_state=42), param_grid, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 5min 21s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
-       "             param_grid={'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
-       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
-       "                         'min_samples_split': [2, 5, 10],\n",
-       "                         'n_estimators': [100, 200, 400]})"
-      ]
-     },
-     "execution_count": 551,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# Fit the model\n",
-    "reg.fit(X_train, y_train)"
+    "rf.fit(X_train, y_train)"
    ]
   },
   {
@@ -2607,7 +2510,7 @@
     }
    ],
    "source": [
-    "reg.best_estimator_"
+    "rf.best_estimator_"
    ]
   },
   {
@@ -2627,7 +2530,7 @@
     }
    ],
    "source": [
-    "accuracy = reg.score(X_test, y_test)\n",
+    "accuracy = rf.score(X_test, y_test)\n",
     "accuracy"
    ]
   },
